--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h2>Media Sosial</h2>
       <div class="medsos-list">
         <a
-          href="https://github.com/frznet"
+          href="https://github.com/fryznet"
           target="_blank"
           class="medsos-item"
         >
