--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="img/logos.png" />
   </head>
   <body>
-    <!-- Bagian Navigasi -->
     <header>
       <nav>
         <div class="logo"><span>Fryznet</span></div>
@@ -21,7 +20,6 @@
       </nav>
     </header>
 
-    <!-- Bagian Home -->
     <section id="home" class="hero">
       <div class="hero-content">
         <p>Hi, Welcome to My Website</p>
@@ -33,58 +31,55 @@
         <a href="#about" class="btn-hero">About Me</a>
       </div>
       <div class="hero-logo">
-        <img src="FreyzaPorto.jpeg" alt="Fryznet" />
+        <img src="FreyzaPorto.jpeg" alt="Foto Profil Fryznet" />
       </div>
     </section>
 
-    <!-- Bagian About -->
     <section id="about" class="container about">
       <h2>About Me</h2>
       <div class="about-content">
         <p>
-          Nama saya <strong>M. Freyza Raafi Pratama</strong> saya seorang pelajar SMA di Surabaya
+          Nama saya <strong>M. Freyza Raafi Pratama</strong>. Saya seorang pelajar SMA di Surabaya
           yang memiliki minat dalam bidang teknologi.
         </p>
         <p>
           Saya fokus mengembangkan kemampuan di bidang teknologi dan terus
-          belajar mengikuti perkembangannya. Diluar kesibukan saya sebagai
+          belajar mengikuti perkembangannya. Di luar kesibukan saya sebagai
           pelajar, saya juga suka berorganisasi dan melihat konser. Saya
           memiliki hobi bermain basket, futsal, dan memainkan alat musik.
         </p>
         <p>
           Ke depannya, saya ingin terus berkembang dan memanfaatkan teknologi
-          secara positif serta bermanfaat dan dapat berguna bagi bangsa dan
-          negara kedepannya
+          secara positif serta bermanfaat bagi bangsa dan negara.
         </p>
       </div>
     </section>
 
-    <!-- Bagian Proyek -->
     <section id="proyek" class="container bg-light proyek">
       <h2>Proyek Saya</h2>
       <div class="proyek-grid">
-        <a href="https://docs.google.com/document/d/1FlCq_DYQqEoTnBbJFa_3e1HmyKhkueZN/edit?usp=drive_link&ouid=114082127343191857200&rtpof=true&sd=true" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="ExcelProject" />
+        <a href="https://docs.google.com/document/d/1FlCq_DYQqEoTnBbJFa_3e1HmyKhkueZN/edit?usp=drive_link" target="_blank" class="proyek-card">
+          <img src="project1.png" alt="Excel Project" />
           <div class="proyek-info">
             <h3>Excel</h3>
             <p>My Excel Project</p>
           </div>
         </a>
-        <a href="https://www.tinkercad.com/things/6aG6lttb2BV-freyzaxii-2project-trafficlight?sharecode=Gkg6U73SMYG4m52rE4PjZyhEh3T2HrN5vPyWOc7-n4E" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="ArduinoLed" />
+        <a href="https://www.tinkercad.com/things/6aG6lttb2BV-freyzaxii-2project-trafficlight" target="_blank" class="proyek-card">
+          <img src="project1.png" alt="Arduino Led" />
           <div class="proyek-info">
             <h3>ArduinoLED</h3>
             <p>Arduino LED Control Project</p>
           </div>
         </a>
-        <a href="https://www.tinkercad.com/things/346ECjv5X98-projectlirikfreyza?sharecode=b_QNW2bVSXt_D9oJ8W3Ue-fKggczDrqQ6dCwy-ad6wU" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="ArduinoLyric" />
+        <a href="https://www.tinkercad.com/things/346ECjv5X98-projectlirikfreyza" target="_blank" class="proyek-card">
+          <img src="project1.png" alt="Arduino Lyric" />
           <div class="proyek-info">
             <h3>Arduino Lirik</h3>
             <p>Arduino Lyric Display Project</p>
           </div>
         </a>
-        <a href="https://drive.google.com/file/d/17O7u7Q2JhlU44vWIRGJNBkKcbmogIVpf/view?usp=drive_link" target="_blank" class="proyek-card">
+        <a href="https://drive.google.com/file/d/17O7u7Q2JhlU44vWIRGJNBkKcbmogIVpf/view" target="_blank" class="proyek-card">
           <img src="project1.png" alt="Flowchart Project" />
           <div class="proyek-info">
             <h3>Flowchart</h3>
@@ -98,7 +93,7 @@
             <p>My Website Project</p>
           </div>
         </a>
-        <a href="#" target="_blank" class="proyek-card">
+        <a href="#" class="proyek-card">
           <img src="project1.png" alt="PSAJ Project" />
           <div class="proyek-info">
             <h3>Website PSAJ</h3>
@@ -108,38 +103,24 @@
       </div>
     </section>
 
-    <!-- Bagian Medsos -->
     <section id="medsos" class="container medsos">
       <h2>Media Sosial</h2>
       <div class="medsos-list">
-        <a
-          href="https://github.com/fryznet"
-          target="_blank"
-          class="medsos-item"
-        >
+        <a href="https://github.com/fryznet" target="_blank" class="medsos-item">
           <img src="gbr_github.png" alt="GitHub" />
           <span>Github</span>
         </a>
-        <a
-          href="https://instagram.com/freyzaraafi"
-          target="_blank"
-          class="medsos-item"
-        >
+        <a href="https://instagram.com/freyzaraafi" target="_blank" class="medsos-item">
           <img src="gbr_ig.png" alt="Instagram" />
           <span>Instagram</span>
         </a>
-        <a
-          href="https://www.tiktok.com/@8za_4rchivee?_r=1&_t=ZS-93fCddBgIhWhttps://www.tiktok.com/@8za_4rchivee?_r=1&_t=ZS-93fCddBgIhWhttps://www.tiktok.com/@8za_4rchivee?_r=1&_t=ZS-93fCddBgIhW"
-          target="_blank"
-          class="medsos-item"
-        >
+        <a href="https://www.tiktok.com/@8za_4rchivee" target="_blank" class="medsos-item">
           <img src="gbr_tiktok.png" alt="TikTok" />
           <span>TikTok</span>
         </a>
       </div>
     </section>
 
-    <!-- Bagian Footer -->
     <footer>
       <p>© 2026 FryznetProject</p>
     </footer>
