--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p>My Website Project</p>
           </div>
         </a>
-        <a href="#" class="proyek-card">
+        <a href="https://fryznet.github.io/psaj_kel00/" class="proyek-card">
           <img src="project1.png" alt="PSAJ Project" />
           <div class="proyek-info">
             <h3>Website PSAJ</h3>
@@ -126,3 +126,4 @@
     </footer>
   </body>
 </html>
+
