--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
           </div>
         </a>
         <a href="https://www.tinkercad.com/things/6aG6lttb2BV-freyzaxii-2project-trafficlight" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="Arduino Led" />
+          <img src="IMG-20260209-WA0027.jpg" alt="Arduino Led" />
           <div class="proyek-info">
             <h3>ArduinoLED</h3>
             <p>Arduino LED Control Project</p>
           </div>
         </a>
         <a href="https://www.tinkercad.com/things/346ECjv5X98-projectlirikfreyza" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="Arduino Lyric" />
+          <img src="IMG-20260209-WA0027.jpg" alt="Arduino Lyric" />
           <div class="proyek-info">
             <h3>Arduino Lirik</h3>
             <p>Arduino Lyric Display Project</p>
           </div>
         </a>
         <a href="https://drive.google.com/file/d/17O7u7Q2JhlU44vWIRGJNBkKcbmogIVpf/view" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="Flowchart Project" />
+          <img src="IMG-20260209-WA0027.jpg" alt="Flowchart Project" />
           <div class="proyek-info">
             <h3>Flowchart</h3>
             <p>My Flowchart Project</p>
@@ -126,4 +126,5 @@
     </footer>
   </body>
 </html>
+
 
