--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <h2>About Me</h2>
       <div class="about-content">
         <p>
-          Nama saya <strong>M. Freyza Raafi Pratama</strong>. Saya seorang pelajar SMA di Surabaya
-          yang memiliki minat dalam bidang teknologi.
+          Nama saya <strong>M. Freyza Raafi Pratama</strong>. Saya seorang pelajar SMA di Surabaya,
+          saya memiliki minat dalam bidang teknologi dan bidang informasi.
         </p>
         <p>
           Saya fokus mengembangkan kemampuan di bidang teknologi dan terus
           belajar mengikuti perkembangannya. Di luar kesibukan saya sebagai
-          pelajar, saya juga suka berorganisasi dan melihat konser. Saya
-          memiliki hobi bermain basket, futsal, dan memainkan alat musik.
+          pelajar, saya juga suka berorganisasi. Saya memiliki hobi bermain basket,
+          futsal, dan memainkan alat musik.
         </p>
         <p>
           Ke depannya, saya ingin terus berkembang dan memanfaatkan teknologi
@@ -59,7 +59,7 @@
       <h2>Proyek Saya</h2>
       <div class="proyek-grid">
         <a href="https://docs.google.com/document/d/1FlCq_DYQqEoTnBbJFa_3e1HmyKhkueZN/edit?usp=drive_link" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="Excel Project" />
+          <img src="IMG-20260209-WA0028.jpg" alt="Excel Project" />
           <div class="proyek-info">
             <h3>Excel</h3>
             <p>My Excel Project</p>
@@ -87,14 +87,14 @@
           </div>
         </a>
         <a href="https://github.com/fryznet/porto" target="_blank" class="proyek-card">
-          <img src="project1.png" alt="Website Project" />
+          <img src="file_00000000626471fd9935fc9820a553e4.png" alt="Website Project" />
           <div class="proyek-info">
             <h3>Website Sederhana</h3>
             <p>My Website Project</p>
           </div>
         </a>
         <a href="https://fryznet.github.io/psaj_kel00/" class="proyek-card">
-          <img src="project1.png" alt="PSAJ Project" />
+          <img src="file_00000000626471fd9935fc9820a553e4.png" alt="PSAJ Project" />
           <div class="proyek-info">
             <h3>Website PSAJ</h3>
             <p>Website PSAJ Non Tulis</p>
@@ -126,5 +126,6 @@
     </footer>
   </body>
 </html>
+
 
 
